# venice-ai-api-sdk-rust

./: .gitignore  Cargo.toml  IMPROVEMENT_PLAN.md  README.md  SRP_RESTRUCTURING_PLAN.md  cleanup-git-history.md
examples/: README.md  api_key_management.rs  api_keys_example.rs  basic_test.rs  chat_completion.rs  debug_headers.rs  debug_image_api.rs  debug_upscale_api.rs  debug_upscale_multipart.rs  dotenv_example.rs  generate_and_upscale_test.rs  generate_web3_key.rs  image_generation.rs  image_generation_example.rs  image_upscale_example.rs  model_compatibility.rs  model_feature_suffix.rs  model_traits.rs  simple_test.rs  test_api_keys_endpoint.rs  test_chat_endpoint.rs  test_models_endpoint.rs  unified_client.rs  very_simple_test.rs  working_example.rs
examples/api_keys/: create_api_key.rs  delete_api_key.rs  generate_web3_key.rs  list_api_keys.rs  paginated_api_keys.rs
examples/chat/: advanced_streaming.rs  builder_streaming.rs  chat_completion.rs  model_feature_suffix.rs  streaming_chat_completion.rs
examples/common/: api_key_management.rs  mock_client_demo.rs  rate_limit_example.rs  retry_example.rs  unified_client_demo.rs  webhook_verification_example.rs
examples/image/: generate_image.rs  list_styles.rs  response_parsing.rs  upscale_image.rs
examples/models/: list_models.rs  model_compatibility.rs  model_traits.rs  paginated_models.rs
src/: client.rs  config.rs  error.rs  lib.rs  macros.rs  pagination.rs  rate_limit.rs  retry.rs  webhooks.rs
src/api/: api_keys.rs  chat.rs  image.rs  mod.rs  models.rs
src/api_keys/: create.rs  delete.rs  generate_web3_key.rs  list.rs  mod.rs
src/chat/: completions.rs  conversions.rs  mod.rs  model_feature_suffix.rs  streaming.rs  test_client.rs  tests.rs  tests_fixed.rs  tests_simple.rs
src/http/: client.rs  client_factory.rs  mod.rs  response_processor.rs  url.rs
src/image/: generate.rs  mod.rs  styles.rs  upscale.rs
src/middleware/: mod.rs  rate_limiter.rs  retry.rs
src/models/: chat.rs  compatibility_mapping.rs  list.rs  mod.rs  traits.rs
src/services/: mod.rs  webhook.rs
src/traits/: api_keys.rs  chat.rs  image.rs  mod.rs  models.rs
src/utils/: mod.rs  serialization.rs  validation.rs
tests/: integration_tests.rs
tests/integration/: mod.rs  streaming_tests.rs
